# pyduck-ona

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: duckona_tutorial.md  hr_analysis_tutorial.md
examples/: full_workflow.py  hr_attrition_analysis.py  hr_compensation_mobility_analysis.py
src/pyduck_ona/: __init__.py  analysis.py  bridge.py  core.py  hierarchy.py  py.typed
src/pyduck_ona/graph/: __init__.py
src/pyduck_ona/stats/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py  test_analysis.py  test_graph.py  test_stats.py
tests/unit/: test_bridge.py  test_core.py  test_safety.py
